COPY mode: IIDM-free run phase for actions, monitors and result extensions
The last worker side IIDM reads of the security analysis run phase are
removed, so the multi thread COPY mode never needs the variant multi
thread access mode, whatever the analysis uses:

- branch results: the terminal nominal voltages are cached at build
  time (LfBranchImpl, LfTieLineBranch, LfBoundaryLineBranch,
  LfLegBranch), where they were already read for per-uniting;
- bus results and violations: the voltage level id is cached at build
  time (LfBusImpl, LfStarBus, LfBoundaryLineBus), the bus breaker bus
  ids and the violation location are lazily memoized and materialized
  on the calling thread before the copies are taken
  (LfBus.materializeIidmDerivedData);
- actions: the load action power shifts (base P0/Q0 and load detail
  extension reads) are precomputed from the IIDM network on the calling
  thread (LfActionUtils.precomputeLoadActionPowerShifts); the per
  network action conversion then never reads the IIDM network.

The security analysis now always passes workersAccessIidmNetwork=false
to the copy helper. Verified against an unmodified powsybl-network-store
client on a local server + postgres, 3 threads, with state monitors,
result extensions and an operator strategy combining a load action and
a terminals connection action: results identical to single thread
(0.45 s vs 2.3 s). Full test suite passes (1516 tests).

Signed-off-by: Gautier Bureau <gautier.bureau@rte-france.com>
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013X2tWZbGT5N741mF9789ed